# proj2

./: CMakeLists.txt  StringReverserMain.h  main.cpp
Proj2/: Server.h
Proj2/CacheManager/: FileCacheManager.h
Proj2/ClientHendlers/: ClientHendler.h  MyClientHendler.h  MyTestClientHendler.h
Proj2/Factory/: MatrixSolutionFactory.h  SearchableFactory.h  SolutionFactory.h
Proj2/Servers/: MyParallelServer.h  MySerialServer.h
Proj2/Solver/: AStar.h  BFS.h  BreadthFirst.h  DFS.h  MatrixSearchable.h  MatrixSolution.h  Searcher.h  Solution.h  StringReverserSearcher.h  StringReverserSolution.h
Proj2/Utils/: AStarUtils.h  Point.h  Utils.h
ServerNameSpace/: ClientHendler.h  Server.h
ServerNameSpace/CacheManager/: CacheManager.h  FileCacheManager.h
ServerNameSpace/ClientHendlers/: ClientHendler.cpp  ClientHendler.h  MyClientTestHendler.h
ServerNameSpace/Factory/: MatrixSearchableFactory.h  MatrixSolutionFactory.h  SearchableFactory.h  SolutionFactory.h  StringSearchableFactory.h  StringSolutionFactory.h
ServerNameSpace/Servers/: MyParallelServer.h  MySerialServer.h  Server.cpp
ServerNameSpace/Solver/: AStar.h  BFS.h  BreadthFirst.h  DFS.h  MatrixSearchable.h  MatrixSolution.h  ReverseStringSearchable.cpp  Searchable.h  Searcher.h  Solution.h  Solver.h  State.h  StringReverserSearchable.h  StringReverserSearcher.cpp  StringReverserSearcher.h  StringReverserSolution.h
ServerNameSpace/Stream/: InputStream.h  OutputStream.h
ServerNameSpace/Utils/: AStarUtils.h  BFSUtils.h  BreatdhUtils.h  Comperators.h  FileTextHendler.cpp  FileTextHendler.h  Point.h  SharedPtrHash.h  Utils.h
Tests/: CompareAlgos.h  FileCacheManagerTests.h  MatrixCreator.h
